@@ -1,6 +1,6 @@
 /*
  *
- *  Copyright 2015 the original author or authors.
+ *  Copyright 2015-2019 the original author or authors.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -21,9 +21,6 @@ package springfox.documentation.spring.web.plugins;
 
 import com.fasterxml.classmate.ResolvedType;
 import com.fasterxml.classmate.TypeResolver;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.collect.Ordering;
 import org.springframework.web.bind.annotation.RequestMethod;
 import springfox.documentation.PathProvider;
 import springfox.documentation.annotations.Incubating;
@@ -48,15 +45,21 @@ import springfox.documentation.spi.service.contexts.DocumentationContext;
 import springfox.documentation.spi.service.contexts.DocumentationContextBuilder;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Stream;
 
-import static com.google.common.collect.FluentIterable.*;
-import static com.google.common.collect.Lists.*;
-import static com.google.common.collect.Maps.*;
-import static com.google.common.collect.Sets.*;
+import static java.util.Optional.*;
+import static java.util.stream.Collectors.*;
 import static springfox.documentation.builders.BuilderDefaults.*;
 import static springfox.documentation.schema.AlternateTypeRules.*;
 
@@ -69,22 +72,22 @@ public class Docket implements DocumentationPlugin {
   public static final String DEFAULT_GROUP_NAME = "default";
 
   private final DocumentationType documentationType;
-  private final List<SecurityContext> securityContexts = newArrayList();
-  private final Map<RequestMethod, List<ResponseMessage>> responseMessages = newHashMap();
-  private final List<Parameter> globalOperationParameters = newArrayList();
-  private final List<Function<TypeResolver, AlternateTypeRule>> ruleBuilders = newArrayList();
-  private final Set<Class> ignorableParameterTypes = newHashSet();
-  private final Set<String> protocols = newHashSet();
-  private final Set<String> produces = newHashSet();
-  private final Set<String> consumes = newHashSet();
-  private final Set<ResolvedType> additionalModels = newHashSet();
-  private final Set<Tag> tags = newHashSet();
+  private final List<SecurityContext> securityContexts = new ArrayList<>();
+  private final Map<RequestMethod, List<ResponseMessage>> responseMessages = new HashMap<>();
+  private final List<Parameter> globalOperationParameters = new ArrayList<>();
+  private final List<Function<TypeResolver, AlternateTypeRule>> ruleBuilders = new ArrayList<>();
+  private final Set<Class> ignorableParameterTypes = new HashSet<>();
+  private final Set<String> protocols = new HashSet<>();
+  private final Set<String> produces = new LinkedHashSet<>();
+  private final Set<String> consumes = new LinkedHashSet<>();
+  private final Set<ResolvedType> additionalModels = new HashSet<>();
+  private final Set<Tag> tags = new HashSet<>();
 
   private PathProvider pathProvider;
   private List<? extends SecurityScheme> securitySchemes;
-  private Ordering<ApiListingReference> apiListingReferenceOrdering;
-  private Ordering<ApiDescription> apiDescriptionOrdering;
-  private Ordering<Operation> operationOrdering;
+  private Comparator<ApiListingReference> apiListingReferenceOrdering;
+  private Comparator<ApiDescription> apiDescriptionOrdering;
+  private Comparator<Operation> operationOrdering;
 
   private ApiInfo apiInfo = ApiInfo.DEFAULT;
   private String groupName = DEFAULT_GROUP_NAME;
@@ -92,10 +95,10 @@ public class Docket implements DocumentationPlugin {
   private GenericTypeNamingStrategy genericsNamingStrategy = new DefaultGenericTypeNamingStrategy();
   private boolean applyDefaultResponseMessages = true;
   private String host = "";
-  private Optional<String> pathMapping = Optional.absent();
+  private Optional<String> pathMapping = empty();
   private ApiSelector apiSelector = ApiSelector.DEFAULT;
   private boolean enableUrlTemplating = false;
-  private List<VendorExtension> vendorExtensions = newArrayList();
+  private List<VendorExtension> vendorExtensions = new ArrayList<>();
 
 
   public Docket(DocumentationType documentationType) {
@@ -163,13 +166,13 @@ public class Docket implements DocumentationPlugin {
 
   /**
    * Determines the generated, swagger specific, urls.
-   *
+   * <p>
    * By default, relative urls are generated. If absolute urls are required, supply an implementation of
    * AbsoluteSwaggerPathProvider
    *
    * @param pathProvider - provides an alternate implementation of path provider
    * @return this Docket
-   * @see springfox.documentation.spring.web.paths.AbstractPathProvider
+   * @see springfox.documentation.spring.web.paths.DefaultPathProvider
    */
   public Docket pathProvider(PathProvider pathProvider) {
     this.pathProvider = pathProvider;
@@ -178,16 +181,14 @@ public class Docket implements DocumentationPlugin {
 
   /**
    * Overrides the default http response messages at the http request method level.
-   *
+   * <p>
    * To set specific response messages for specific api operations use the swagger core annotations on
    * the appropriate controller methods.
    *
    * @param requestMethod    - http request method for which to apply the message
    * @param responseMessages - the message
    * @return this Docket
-   * @see io.swagger.annotations.ApiResponse
-   * and
-   * @see io.swagger.annotations.ApiResponses
+   * {@code See swagger annotations <code>@ApiResponse</code>, <code>@ApiResponses</code> }.
    * @see springfox.documentation.spi.service.contexts.Defaults#defaultResponseMessages()
    */
   public Docket globalResponseMessage(RequestMethod requestMethod,
@@ -252,20 +253,20 @@ public class Docket implements DocumentationPlugin {
    * java.lang.reflect.Type)
    */
   public Docket alternateTypeRules(AlternateTypeRule... alternateTypeRules) {
-    this.ruleBuilders.addAll(from(newArrayList(alternateTypeRules)).transform(identityRuleBuilder()).toList());
+    this.ruleBuilders.addAll(Stream.of(alternateTypeRules).map(identityRuleBuilder()).collect(toList()));
     return this;
   }
 
   /**
    * Provide an ordering schema for operations
-   *
+   * <p>
    * NOTE: @see <a href="https://github.com/springfox/springfox/issues/732">#732</a> in case you're wondering why
    * specifying position might not work.
    *
    * @param operationOrdering - ordering of the operations
    * @return this Docket
    */
-  public Docket operationOrdering(Ordering<Operation> operationOrdering) {
+  public Docket operationOrdering(Comparator<Operation> operationOrdering) {
     this.operationOrdering = operationOrdering;
     return this;
   }
@@ -318,14 +319,14 @@ public class Docket implements DocumentationPlugin {
    * Controls how ApiListingReference's are sorted.
    * i.e the ordering of the api's within the swagger Resource Listing.
    * The default sort is Lexicographically by the ApiListingReference's path
-   *
+   * <p>
    * NOTE: @see <a href="https://github.com/springfox/springfox/issues/732">#732</a> in case you're wondering why
    * specifying position might not work.
    *
    * @param apiListingReferenceOrdering - ordering of the api listing references
    * @return this Docket
    */
-  public Docket apiListingReferenceOrdering(Ordering<ApiListingReference> apiListingReferenceOrdering) {
+  public Docket apiListingReferenceOrdering(Comparator<ApiListingReference> apiListingReferenceOrdering) {
     this.apiListingReferenceOrdering = apiListingReferenceOrdering;
     return this;
   }
@@ -333,7 +334,7 @@ public class Docket implements DocumentationPlugin {
   /**
    * Controls how <code>io.swagger.model.ApiDescription</code>'s are ordered.
    * The default sort is Lexicographically by the ApiDescription's path.
-   *
+   * <p>
    * NOTE: @see <a href="https://github.com/springfox/springfox/issues/732">#732</a> in case you're wondering why
    * specifying position might not work.
    *
@@ -341,7 +342,7 @@ public class Docket implements DocumentationPlugin {
    * @return this Docket
    * @see springfox.documentation.spring.web.scanners.ApiListingScanner
    */
-  public Docket apiDescriptionOrdering(Ordering<ApiDescription> apiDescriptionOrdering) {
+  public Docket apiDescriptionOrdering(Comparator<ApiDescription> apiDescriptionOrdering) {
     this.apiDescriptionOrdering = apiDescriptionOrdering;
     return this;
   }
@@ -378,14 +379,14 @@ public class Docket implements DocumentationPlugin {
    * @return this Docket
    */
   public Docket pathMapping(String path) {
-    this.pathMapping = Optional.fromNullable(path);
+    this.pathMapping = ofNullable(path);
     return this;
   }
 
   /**
    * Decides whether to use url templating for paths. This is especially useful when you have search api's that
    * might have multiple request mappings for each search use case.
-   *
+   * <p>
    * This is an incubating feature that may not continue to be supported after the swagger specification is modified
    * to accommodate the use case as described in issue #711
    *
@@ -408,7 +409,7 @@ public class Docket implements DocumentationPlugin {
    */
   public Docket additionalModels(ResolvedType first, ResolvedType... remaining) {
     additionalModels.add(first);
-    additionalModels.addAll(newHashSet(remaining));
+    additionalModels.addAll(Arrays.stream(remaining).collect(toSet()));
     return this;
   }
 
@@ -421,7 +422,7 @@ public class Docket implements DocumentationPlugin {
    */
   public Docket tags(Tag first, Tag... remaining) {
     tags.add(first);
-    tags.addAll(newHashSet(remaining));
+    tags.addAll(Arrays.stream(remaining).collect(toSet()));
     return this;
   }
 
@@ -491,21 +492,11 @@ public class Docket implements DocumentationPlugin {
   }
 
   private Function<AlternateTypeRule, Function<TypeResolver, AlternateTypeRule>> identityRuleBuilder() {
-    return new Function<AlternateTypeRule, Function<TypeResolver, AlternateTypeRule>>() {
-      @Override
-      public Function<TypeResolver, AlternateTypeRule> apply(AlternateTypeRule rule) {
-        return identityFunction(rule);
-      }
-    };
+    return this::identityFunction;
   }
 
   private Function<TypeResolver, AlternateTypeRule> identityFunction(final AlternateTypeRule rule) {
-    return new Function<TypeResolver, AlternateTypeRule>() {
-      @Override
-      public AlternateTypeRule apply(TypeResolver typeResolver) {
-        return rule;
-      }
-    };
+    return typeResolver -> rule;
   }
 
   Docket selector(ApiSelector apiSelector) {
@@ -514,27 +505,16 @@ public class Docket implements DocumentationPlugin {
   }
 
   private Function<TypeResolver, AlternateTypeRule> newSubstitutionFunction(final Class clazz, final Class with) {
-    return new Function<TypeResolver, AlternateTypeRule>() {
-
-      @Override
-      public AlternateTypeRule apply(TypeResolver typeResolver) {
-        return newRule(
-            typeResolver.resolve(clazz),
-            typeResolver.resolve(with),
-            DIRECT_SUBSTITUTION_RULE_ORDER);
-      }
-    };
+    return typeResolver -> newRule(
+        typeResolver.resolve(clazz),
+        typeResolver.resolve(with),
+        DIRECT_SUBSTITUTION_RULE_ORDER);
   }
 
   private Function<TypeResolver, AlternateTypeRule> newGenericSubstitutionFunction(final Class clz) {
-    return new Function<TypeResolver, AlternateTypeRule>() {
-      @Override
-      public AlternateTypeRule apply(TypeResolver typeResolver) {
-        return newRule(
-            typeResolver.resolve(clz, WildcardType.class),
-            typeResolver.resolve(WildcardType.class),
-            GENERIC_SUBSTITUTION_RULE_ORDER);
-      }
-    };
+    return typeResolver -> newRule(
+        typeResolver.resolve(clz, WildcardType.class),
+        typeResolver.resolve(WildcardType.class),
+        GENERIC_SUBSTITUTION_RULE_ORDER);
   }
 }
